added more elements and adjusted css

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <body>
     <header class="header">
         <h1>Brett VanHoose</h1>
+        <!-- header bar gets smaller while other elements dont -->
+        <!-- nav element won't move to right side of the page -->
+    
         <nav>
             <ul>
                 <li>
-                    <!-- add hrefs to link to parts of page -->
-                    <a>About me</a> 
+                    <!-- add href ids to link to parts of page -->
+                    <a>About me</a>
                 </li>
                 <li>
                     <a>Work</a>
@@ -30,5 +33,23 @@
             </ul>
         </nav>
     </header>
+    <!-- test image wont show -->
+    <img class="main-image" src="./assest/images/vaporwave 2.jpg"></img>
+    <section class="grid-container">
+        <div class="grid-item">
+            <h2>About Me</h2>
+        </div>
+
+        <div class="about-me grid-item">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p>
+        </div>
+    </section>
 </body>
+
 </html>
