added HTML elements and adjusted css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 <body>
     <header class="header">
         <h1>Brett VanHoose</h1>
-        <!-- header bar gets smaller while other elements dont -->
-        <!-- nav element won't move to right side of the page -->
-    
         <nav>
             <ul>
                 <li>
@@ -27,29 +24,41 @@
                 <li>
                     <a>Contact me</a>
                 </li>
-                <li>
-                    <a>Resume</a>
-                </li>
             </ul>
         </nav>
     </header>
-    <!-- test image wont show -->
-    <img class="main-image" src="./assest/images/vaporwave 2.jpg"></img>
+   
     <section class="grid-container">
-        <div class="grid-item">
+        <aside class="grid-item bio-head">
             <h2>About Me</h2>
-        </div>
-
-        <div class="about-me grid-item">
-            <p>
+            <img class="main-image" src="./assest/images/Image Ben's Wedding.jpeg" alt="Image of Brett VanHoose">
+            </img>
+        </aside>
+        <section class="about-me grid-item"> 
+            <p class="bio">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum.
             </p>
-        </div>
+        </section>
+        <aside class="work grid-item">
+            <h2>Work</h2>
+        </aside>
+        <section>
+            <p>
+
+            </p>
+        </section>
     </section>
+    <footer class="grid-container-2">
+    <aside class="contact me grid-item">
+            <h2>Contact me</h2>
+        </aside>
+        <nav>m-vanhoose@live.com</nav>
+        <nav>(614)971-9070</nav>
+    </footer>  
 </body>
 
 </html>
