--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Work</h2>
         </aside>
         <section class="img-list">
-            <a href="https://www.google.com/"><img class="google" src="./assest/images/google image.jfif" alt="Google Image"></img></a>
+            <a href="https://are-jae.github.io/FindingFlix/"><img class="google" src="./assest/images/Finding-Flix-web.PNG" alt="Google Image"></img></a>
             <section class="grid-container">
                 <a href="https://www.youtube.com/"><img class="grid-image" src="./assest/images/youtube image.jfif" alt="Youtube Image"></img></a>
                 <a href="https://store.steampowered.com/"><img class="grid-image" src="./assest/images/steam image.jfif" alt="Steam Image"></img></a>
