added sauna games

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="img-list">
             <a href="https://are-jae.github.io/FindingFlix/"><img class="google" src="./assest/images/Finding-Flix-web.PNG" alt="Google Image"></img></a>
             <section class="grid-container">
-                <a href="https://www.youtube.com/"><img class="grid-image" src="./assest/images/youtube image.jfif" alt="Youtube Image"></img></a>
+                <a href="https://damp-earth-65412.herokuapp.com/"><img class="grid-image" src="./assest/images/storeLogo.png" alt="Sauna Games"></img></a>
                 <a href="https://store.steampowered.com/"><img class="grid-image" src="./assest/images/steam image.jfif" alt="Steam Image"></img></a>
                 <a href="https://discord.com/"><img class="grid-image" src="./assest/images/discord image.jfif" alt="Discor image"></img></a>
                 <a href="https://www.netflix.com/"><img class="grid-image" src="./assest/images/netflix image.jfif" alt="Netflix Image"></img></a>
