--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://are-jae.github.io/FindingFlix/"><img class="google" src="./assest/images/Finding-Flix-web.PNG" alt="Google Image"></img></a>
             <section class="grid-container">
                 <a href="https://damp-earth-65412.herokuapp.com/"><img class="grid-image" src="./assest/images/storeLogo.png" alt="Sauna Games"></img></a>
-                <a href="https://store.steampowered.com/"><img class="grid-image" src="./assest/images/steam image.jfif" alt="Steam Image"></img></a>
+                <a href="https://aqueous-ridge-41746-438724c071e7.herokuapp.com/"><img class="grid-image" src="./assest/images/Screenshot 2023-07-13 213339.png" alt="Steam Image"></img></a>
                 <a href="https://discord.com/"><img class="grid-image" src="./assest/images/discord image.jfif" alt="Discor image"></img></a>
                 <a href="https://www.netflix.com/"><img class="grid-image" src="./assest/images/netflix image.jfif" alt="Netflix Image"></img></a>
             </section>
